@startuml D-CLA-INT-001 — Diagrama de Clases Técnico de Zarix
title ZARIX — Diagrama de Clases Técnico (Servicios + Entidades)

skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontSize 11
skinparam linetype ortho
skinparam backgroundColor white
skinparam handwritten false
' ══ Identidad visual Zarix — paleta esmeralda (DESIGN.md) sobre convención de cátedra ══
skinparam roundCorner 10
skinparam TitleFontColor #065F46
skinparam TitleFontSize 15
skinparam TitleFontStyle bold
skinparam ArrowColor #334155
skinparam ArrowFontColor #475569
skinparam ArrowThickness 1.2
skinparam actor {
  BackgroundColor #DCFCE7
  BorderColor #16A34A
  FontColor #064E3B
}
skinparam usecase {
  BackgroundColor #F0FDF4
  BorderColor #16A34A
  FontColor #052E16
}
skinparam rectangle {
  BackgroundColor #FFFFFF
  BorderColor #94A3B8
  FontColor #334155
}
skinparam boundary {
  BackgroundColor #DBEAFE
  BorderColor #2563EB
  FontColor #1E3A8A
}
skinparam control {
  BackgroundColor #FEF9C3
  BorderColor #CA8A04
  FontColor #713F12
}
skinparam entity {
  BackgroundColor #DCFCE7
  BorderColor #16A34A
  FontColor #064E3B
}
skinparam class {
  BackgroundColor #F0FDF4
  BorderColor #16A34A
  HeaderBackgroundColor #DCFCE7
  FontColor #052E16
  AttributeFontColor #334155
  StereotypeFontColor #16A34A
}
skinparam package {
  BackgroundColor #F8FAFC
  BorderColor #16A34A
  FontColor #064E3B
  FontStyle bold
}
skinparam node {
  BackgroundColor #F0FDF4
  BorderColor #16A34A
  FontColor #052E16
}
skinparam database {
  BackgroundColor #DCFCE7
  BorderColor #16A34A
  FontColor #064E3B
}
skinparam component {
  BackgroundColor #F0FDF4
  BorderColor #16A34A
  FontColor #052E16
}
skinparam cloud {
  BackgroundColor #EFF6FF
  BorderColor #3B82F6
  FontColor #1E3A8A
}
skinparam participant {
  BackgroundColor #DCFCE7
  BorderColor #16A34A
  FontColor #064E3B
}
skinparam sequence {
  LifeLineBorderColor #94A3B8
  LifeLineBackgroundColor #F0FDF4
  GroupBackgroundColor #DCFCE7
  GroupBorderColor #16A34A
  GroupFontColor #064E3B
}
skinparam note {
  BackgroundColor #FEFCE8
  BorderColor #EAB308
  FontColor #713F12
}
skinparam legend {
  BackgroundColor #F0FDF4
  BorderColor #16A34A
  FontColor #064E3B
}

skinparam classAttributeIconSize 0

' ─── Capa de Servicios (lógica / control) ───
class "TransactionsService" as TS {
    +create(input): Transaction
    +list(filters): TransactionWithCategory[]
    +getById(id, userId): TransactionWithCategory
    +createBalanceAdjustment(userId, accountId, targetBalance): void
    +delete(id, userId): void
}
class "AccountsService" as AS {
    +list(userId, options?): AccountWithBalance[]
    +aggregateAccountTotals(accounts): AccountAggregates
    +getTotalBalance(userId): { totalUSD, totalARSBlue, accountCount, ... }
}
class "CotizacionesService" as CS {
    -dolarProviders: DolarRateProvider[]
    +getDolarQuotes(): Record<string, DolarQuote>
    +getExchangeRate(from, to): number
    +getCryptoQuote(symbol): CryptoQuote
    +getStockQuote(ticker, market): StockQuote
}
class "InvestmentsService" as IS {
    +list(userId, options?): InvestmentWithPnL[]
    +getPortfolioSummary(userId): PortfolioSummaryPayload
    +sell(input): SellPositionResult
}

' ─── Entidades (datos tipados) ───
class "Account" as Account {
    +id: UUID
    +userId: UUID
    +name: string
    +type: AccountType
    +currency: string
    +balance: number
    +isDebt: boolean
    +creditLimit?: number
}
class "Transaction" as Tx {
    +id: UUID
    +userId: UUID
    +type: TransactionType
    +amount: number
    +currency: string
    +amountInAccountCurrency: number
    +exchangeRate?: number
    +transactionDate: Date
}
class "Category" as Cat {
    +id: UUID
    +name: string
    +type: 'expense' | 'income'
    +parentId?: UUID
}
class "Investment" as Inv {
    +id: UUID
    +ticker?: string
    +type: InvestmentType
    +quantity: number
    +purchasePrice: number
    +currentPrice?: number
}
class "RecurringRule" as RR {
    +id: UUID
    +frequency: Frequency
    +amount: number
    +startDate: Date
    +isActive: boolean
}
class "Budget" as Bud {
    +id: UUID
    +month: Date
    +amount: number
    +alertAtPercent: number
}

' ─── Dependencias de servicios ───
TS ..> Tx : crea
TS ..> Account : lee / dispara trigger
TS ..> CS : convierte moneda
AS ..> Account : agrega saldos
AS ..> CS : valúa en USD/ARS
IS ..> Inv : gestiona posiciones
IS ..> CS : precios de mercado

' ─── Relaciones entre entidades (FKs) ───
Account "1" *-- "*" Tx : account_id
Account "1" *-- "*" Inv : account_id
Account "1" *-- "*" RR : account_id
Cat "1" o-- "*" Tx : category_id
Cat "0..1" o-- "*" Cat : parent_id
Cat "1" o-- "*" Bud : category_id

legend right
Proyecto: ZARIX — TIF UAI 2026
Autor: Jeffrey Dietz
Metodología: ICONIX
Fuente: Ingeniería del código real (Next.js 14 + Supabase)
La lógica vive en los *Service (TypeScript); las entidades son
los tipos de `types/` espejados de las tablas Supabase.
endlegend

@enduml
